--- a/estilos/style.css
+++ b/estilos/style.css
@@ -49,7 +49,7 @@ nav a {
     text-transform: capitalize;
     letter-spacing: .1rem;
     font-weight: 700;
-    color: #000;   
+    color: rgb(40, 40, 40);  
 }
 
 a:hover {
@@ -67,7 +67,7 @@ main {
 main h2 {
     font-size: 2rem;
     color: #fff;
-    background-color: #000;
+    background-color: rgb(40, 40, 40);
     padding: .6rem;
     border-radius: .35rem;
     margin-bottom: 1.5rem;
@@ -86,13 +86,14 @@ main h2 {
     padding: 0.5rem 1.25rem;
     letter-spacing: .1rem;
     font-weight: 700;
-    border: 2px solid black;
+    border: 2px solid rgb(40, 40, 40);
     cursor: pointer;
+    color: rgb(40, 40, 40);
     border-radius: .35rem;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 .btn-hero:hover{
     color:#fff;
-    background-color: #000;
+    background-color: rgb(40, 40, 40);
 }
